--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 before_install: gem install bundler -v 1.10.5
 branches:
   only:
-  - /^v[0-9]/
+  - master
 bundler_args: "--without production --path=vendor/bundle"
 cache:
   directories:
